<resources>
    <string name="app_name">factory testing</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">factory testing</string>
    <string name="phonetest">Moblie Test</string>
    <string name="manualtest">Manual Test</string>
    <string name="pcbatest">PCBA Test</string>
    <string name="listtest">Single Test</string>
    <string name="phonetest_confirm">Whether to open the machine testing?</string>
    <string name="manualtest_confirm">Whether to open the manual testing?</string>
    <string name="pcbatest_confirm">Whether to open the PCBA testing?</string>
    <string name="testreport">Test Report</string>
    <string name="factoryset">Factory Reset</string>
    <string name="factoryset_confirm">Restore the factory reset and shutdown?</string>
    <string name="softinfo">Software Info</string>
    <string name="lsensor_data">0</string>
    <string name="pressure_sensor_data">0</string>
    <string name="sn_name">information</string>
    <string name="imei_invalid">Invalid</string>
    <string name="ok">OK</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="pass">pass</string>
    <string name="fail">fail</string>
    <string name="again">resurvey</string>
    <string name="confirm">ok</string>
    <string name="cancel">cancel</string>
    <string name="start">start</string>
    <string name="scan">scan</string>
    <string name="test_confirm">please choose</string>
    <string name="device_open_fail">Start equipment failure!</string>
    <string name="service_get_fail">Start the service failure!</string>
    <string name="sensor_get_fail">Sensor start-up failure!</string>
    <string name="sensor_register_fail">Sensors registration failure!</string>
    <string name="test_pass">pass-test</string>
    <string name="shake_hint_l">Observation value changes in light and dark place</string>
    <string name="shake_hint_p">Please put your hand close to and leave the sensing area,and watching the numerical change</string>
    <string name="shake_hint_pressure"></string>
    <string name="sdcard_wait">Please wait for read SD card...</string>
    <string name="remove_headset">Please remove the headset</string>
    <string name="insert_headset">Please insert the headset</string>
    <string name="stop">stop</string>
    <string name="play">play</string>
    <string name="record">record</string>
    <string name="time_out">time out!</string>
    <string name="touchpanel_edge_name">Touch Screen</string>
    <string name="touchpanel_edge_linearity">Linearity Test:</string>
    <string name="touchpanel_edge_accuracy">Accuracy Test:</string>
    <string name="touchpanel_edge_sensivicity">Sensitivity Test:</string>
    <string name="touchpanel_edge_deazone">Marginal Test:</string>
    <string name="touchpanel_edge_zoom">Gestures Test:</string>
    <string name="touchpanel_edge_free">Free Marking Test:</string>
    <string name="touchpanel_edge_linearityHorizontal">Linearity Horizontal Test:</string>
    <string name="touchpanel_edge_linearityVertical">Linearity Vertical Test:</string>
    <string name="touchpanel_edge_pass">success!</string>
    <string name="touchpanel_edge_fail">fail!</string>
    <string name="Version_name">version</string>
    <string name="calibration">\ncalibration:</string>
    <string name="calibration_yes">Calibrated</string>
    <string name="calibration_no">uncalibrated</string>
    <string name="calibration_yes_1">1</string>
    <string name="calibration_no_0">0</string>
    <string name="no_test">Not Done</string>
    <string name="is_test">Has Tested</string>
    <string name="mobile_cit">Mobile CIT:</string>
    <string name="sim_name">SIM</string>
    <string name="keypadbacklight_confirm">confirm</string>
    <string name="led_name">LED</string>
    <string name="lcd_name">LCD test</string>
    <string name="led_flick">LED blink</string>
    <string name="led_tri_text">LED test confirm:red,green,blue</string>
    <string name="led_dual_text">LED test confirm:red,green</string>
    <string name="led_confirm">LED colour correct?</string>
    <string name="ycd_name">YCD</string>
    <string name="flashlight_name">flash lamp</string>
    <string name="flashlight_front_name">flash lamp front</string>
    <string name="flashlight_confirm">If the flash open?</string>
    <string name="key_name">key</string>
    <string name="key_text">Please click the button below</string>
    <string name="key_volume_up">volume up key</string>
    <string name="key_volume_down">volume down key</string>
    <string name="key_power_key">power key</string>
    <string name="key_menu">menu key</string>
    <string name="key_home">home key</string>
    <string name="key_back">back key</string>
    <string name="key_mute">mute key</string>
    <string name="key_ptt_record">PTT key</string>
    <string name="key_custom">custom key</string>
    <string name="key_sos">sos key</string>
    <string name="key_camera">camera key</string>
    <string name="cameraback_name">rear-view camera</string>
    <string name="cameraback_takepicture">take pictures</string>
    <string name="cameraback_fail_open">Camera open failure,Please check the camera!
</string>
    <string name="autofocus_fail">Autofocus failure</string>
    <string name="camerafront_name">the front camera</string>
    <string name="camerafront_takepicture">take pictures</string>
    <string name="camerabacksub_name">rear-view camera sub</string>
    <string name="vibrate_name">motor running</string>
    <string name="gsensor_name">gravity sensor</string>
    <string name="msensor_name">Magnetic Sensor</string>
    <string name="msensor_tip">Rotation direction and observe the numerical change </string>
    <string name="msensor_data">Magnetic Sensor</string>
    <string name="csensor_name">step counter Sensor</string>
    <string name="csensor_tip">shake or move the numerical change </string>
    <string name="csensor_data">step counter Sensor</string>
    <string name="gysensor_name">Gyroscope Sensor</string>
    <string name="gysensor_tip">Rotation direction and observe the numerical change </string>
    <string name="gysensor_data">Gyroscope Sensor</string>
    <string name="psensor_name">range sensor</string>
    <string name="psensor_result">(0:come near 1:far away):</string>
    <string name="lsensor_name">Light sensor</string>
    <string name="lsensor_result">accuracy:3</string>
    <string name="pressure_sensor_name">Pressure sensor</string>
    <string name="pressure_sensor_result">Pressure:</string>
    <string name="phone_name">phone</string>
    <string name="brightness_name">Backlight</string>
    <string name="brightness_strong">Strong backlight</string>
    <string name="brightness_slow">Weak backlight</string>
    <string name="sdcard_name">TF card</string>
    <string name="sdcard_confirm">Insert SD card?</string>
    <string name="sdcard_to_remove">Please pull out the SD card</string>
    <string name="sdcard_to_insert">Please insert the SD card</string>
    <string name="ram_name">memory</string>
    <string name="bluetooth_name">Bluetooth</string>
    <string name="bluetooth_open">Bluetooth already open</string>
    <string name="bluetooth_scan_start">Start Service...</string>
    <string name="bluetooth_scan_finish">the scanning is completed</string>
    <string name="bluetooth_turning_on">Open the bluetooth...</string>
    <string name="bluetooth_scan_null">Could not find bluetooth</string>
    <string name="wifi_name">WiFi</string>
    <string name="wifi_open">WiFi already open</string>
    <string name="wifi_text">The WiFi test will be completed within 30 seconds,please wait.</string>
    <string name="wifi_scan_failed">scan fail!</string>
    <string name="wifi_is_closing">WiFi close,Please try again after a period of time.</string>
    <string name="wifi_scan_null">not find any AP!</string>
    <string name="wifi_state_unknown">The wireless network status is unknown,please try again.</string>
    <string name="receiver_name">receiver</string>
    <string name="receiver_hint">receiver</string>
    <string name="receiver_playing">In playing, please close to the receiver</string>
    <string name="receiver_recording">In the recording, please speak to the microphone.Recording end after 5 second,or click the stop button</string>
    <string name="transmitter_receiver_playing">Playing the recording,please confirm whether there is sound.</string>
    <string name="transmitter_receiver_confirm">Hear the sound?</string>
    <string name="transmitter_receiver_record_first">Please first recording</string>
    <string name="transmitter_receiver_replay_end">play end.</string>
    <string name="transmitter_receiver_to_record">In the recording,please speak to the microphone.Recording end after 5 second,or click the stop button</string>
    <string name="headset_name">headset</string>
    <string name="headset_hint">headset</string>
    <string name="headset_recording">In the recording,please speak to the microphone.Recording end after 5 second,or click the stop button</string>
    <string name="headset_playing">Playing the recording,please confirm if there is a sound receiver.</string>
    <string name="headset_confirm">Hear the sound?</string>
    <string name="headset_record_first">Please press the recording key</string>
    <string name="headset_replay_end">play end.</string>
    <string name="headset_to_record">In the recording, please speak to the microphone.Recording end after 5 second,or click the stop button</string>
    <string name="headset_insert">Please insert the headset for testing</string>
    <string name="headset_tip">Please speak to the microphone</string>
    <string name="speaker_name">Speaker</string>
    <string name="speaker_hint">Speaker</string>
    <string name="speaker_playing">Speaker playing</string>
    <string name="speaker_confirm">Hear the sound?</string>
    <string name="speaker_play_first">end</string>
    <string name="charger_state">Charging state</string>
    <string name="current_electricity">The current battery level</string>
    <string name="charger_max">Maximum battery level</string>
    <string name="battery_temperature">Battery temperature</string>
    <string name="battery_type">Battery type</string>
    <string name="current_voltage">Current voltage</string>
    <string name="charger_current">Charging current</string>
    <string name="camera_hall_last_cali_result">Last Test Result</string>
    <string name="camera_hall_cali_result">Test Result</string>
    <string name="camera_hall_cali_up_top">Up to Top:</string>
    <string name="camera_hall_cali_down_bottom">Down to Bottom:</string>
    <string name="animation_sound_1">01 Animation and Sound</string>
    <string name="animation_sound_2">02 Animation and Sound</string>
    <string name="animation_sound_3">03 Animation and Sound</string>
    <string name="animation_sound_4">04 Animation and Sound</string>
    <string name="animation_sound_5">05 Animation and Sound</string>
    <string name="animation_sound_6">06 Animation and Sound</string>
    <string name="animation_sound_7">07 Animation and Sound</string>
    <string name="animation_sound_8">08 Animation and Sound</string>
    <string name="animation_sound_9">09 Animation and Sound</string>
    <string name="animation_sound_10">10 Animation and Sound</string>
    <string name="wireless_charger_remind">Please place the device on the wireless charging stand</string>
    <string name="high_charger_protect_txt">High Charger Protect</string>
    <string name="low_charger_protect_txt">Low Charger Protect</string>
    <string name="prize_txt">Prize</string>
    <string name="prize_hw_audio_title">HwTest-Audiotest</string>
    <string name="prize_hw_audio_receiver_play">Receiver Play</string>
    <string name="prize_hw_audio_speaker_play">Speaker Play</string>
    <string name="prize_hw_audio_stop">Stop</string>
</resources>