<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:keepScreenOn="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/Charger_state"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/circle_window_maginleft"
        android:text="@string/charger_state" />

    <TextView
        android:id="@+id/Current_electricity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/circle_window_maginleft"
        android:text="@string/current_electricity" />

    <TextView
        android:id="@+id/Charger_max"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/circle_window_maginleft"
        android:text="@string/charger_max" />

    <TextView
        android:id="@+id/Battery_temperature"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/circle_window_maginleft"
        android:text="@string/battery_temperature" />

    <TextView
        android:id="@+id/Battery_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/circle_window_maginleft"
        android:text="@string/battery_type" />

    <TextView
        android:id="@+id/Current_voltage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/circle_window_maginleft"
        android:text="@string/current_voltage" />

    <TextView
        android:id="@+id/Charger_current"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/circle_window_maginleft"
        android:text="@string/charger_current" />

    <TextView
        android:id="@+id/wirelessChargerRemind"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/circle_window_maginleft"
        android:text="@string/wireless_charger_remind" />

    <include layout="@layout/bottom_bar" />

</LinearLayout>