<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:keepScreenOn="true"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:text="@string/prize_hw_audio_title"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:id="@+id/speaker_play"
        android:layout_gravity="center_horizontal"
        android:text="@string/prize_hw_audio_speaker_play"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:id="@+id/receiver_play"
        android:layout_gravity="center_horizontal"
        android:text="@string/prize_hw_audio_receiver_play"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:id="@+id/stop_play"
        android:layout_gravity="center_horizontal"
        android:text="@string/prize_hw_audio_stop"
        />
</LinearLayout>