<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/high_charger_protect"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/high_charger_protect_txt"
        android:textSize="22sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="#ffffffff"
        android:gravity="center"
        android:text="@string/prize_txt"
        android:textColor="#ff008CEE"
        android:textSize="35sp"
        android:textStyle="italic|bold" />

    <Button
        android:id="@+id/low_charger_protect"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/low_charger_protect_txt"
        android:textSize="22sp" />

</LinearLayout>
